--- a/src/components/common/navbar/Navbar.scss
+++ b/src/components/common/navbar/Navbar.scss
@@ -1,5 +1,4 @@
 .portfolio-navbar {
-    height: 34px;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -7,6 +6,7 @@
     align-items: center;    
 
     &-item {
-        margin: 0 1em;
+        margin: 0.5em 1em;
+        font-size: 1.5em;
     }
 }
