--- a/src/components/common/navbar/Navbar.scss
+++ b/src/components/common/navbar/Navbar.scss
@@ -2,11 +2,20 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;    
+    font-size: 1.5em;
 
-    &-item {
-        margin: 0.5em 1em;
-        font-size: 1.5em;
+    &-title {
+        margin-left: 1em;
+    }
+    
+    &-items {
+        display: flex;
+        flex-direction: row;
+        
+        &-item {
+            margin: 0.5em 1em;
+        }
     }
 }
