--- a/src/components/pages/home/Home.scss
+++ b/src/components/pages/home/Home.scss
@@ -17,6 +17,8 @@
         flex-direction: column;
         width: 100%;
         background-color: #ebebeb;
+        align-items: center;
+        padding-top: 2em;
 
         &-item {
             display: flex;
